[gd_scene load_steps=7 format=3 uid="uid://dfjkpsgus4wcc"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_xof8e"]
[ext_resource type="FontFile" uid="uid://dl7hlrhi5ntxs" path="res://fonts/segoeprb.ttf" id="2_4u2w5"]
[ext_resource type="Texture2D" uid="uid://t85dwdskjvut" path="res://background/mainphoto1152x648_2.png" id="2_y2wox"]
[ext_resource type="Theme" uid="uid://cmam3q2g5nam8" path="res://menu/but.tres" id="4_ug6t7"]

[sub_resource type="Theme" id="Theme_yfq10"]

[sub_resource type="Theme" id="Theme_h83ta"]
default_base_scale = 2.0
default_font = ExtResource("2_4u2w5")
default_font_size = 80

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yfq10")
script = ExtResource("1_xof8e")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_y2wox")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -423.5
offset_top = -201.0
offset_right = 423.5
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_h83ta")
text = "Stronghold Defenders"

[node name="Play_but" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -35.0
offset_right = 149.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ug6t7")
text = "Play"

[node name="Quit_but" type="Button" parent="Play_but"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = 153.5
offset_right = 149.5
offset_bottom = 238.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="Settings_but" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = 63.0
offset_right = 149.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ug6t7")
text = "Settings"

[connection signal="pressed" from="Play_but" to="." method="_on_play_but_pressed"]
[connection signal="pressed" from="Play_but/Quit_but" to="." method="_on_quit_but_pressed"]
[connection signal="pressed" from="Settings_but" to="." method="_on_settings_but_pressed"]
